[workspace]
resolver = "2"
members = [
    "crates/scramjet-common",
    "crates/scramjet-net",
    "bin/scramjet-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Apaar"]
license = "MIT"

[workspace.dependencies]
# --- Core Async ---
tokio = { version = "1.35", features = ["full"] }

# --- Solana Ecosystem ---
solana-sdk = "1.18"
solana-client = "1.18"
solana-rpc-client-api = "1.18"

# --- Networking (Engine) ---
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11" # For Certificate Generation

# --- Utils ---
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
bincode = "1.3" 

# --- Geyser Integration ---
yellowstone-grpc-proto = "1.4.0"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
tokio-stream = "0.1"
futures = "0.3"
http = "0.2"

dotenv = "0.15"

# --- Internal Paths ---
scramjet-common = { path = "crates/scramjet-common" }
scramjet-net = { path = "crates/scramjet-net" }