[package]
name = "scramjet-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
solana-sdk = { workspace = true }
solana-client = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
quinn = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }